# satellite-vegetation-tool

./: .gitignore  DELIVERABLES.md  README.md  SPEC.md  TASK_1.md  VALIDATION.md  pyproject.toml  requirements.txt
checks/: check_outputs.py  manual_pixel_check.py  validate_ndvi.py
src/: calculate_ndvi.py  check_outputs.py  check_raster_info.py  run_pipeline.py  visualize_ndvi.py
